[gd_scene load_steps=56 format=3 uid="uid://caew606bc4uen"]

[ext_resource type="Texture2D" uid="uid://cxhoiog2fnjdc" path="res://Assets/MainCharacter/minerman-death-front.png" id="1_6lv37"]
[ext_resource type="Texture2D" uid="uid://bokqn2bn6pfbe" path="res://Assets/MainCharacter/minerman-walk-front.png" id="1_42fyu"]
[ext_resource type="Script" path="res://MainCharacter/main_character.gd" id="1_tg18s"]
[ext_resource type="Texture2D" uid="uid://rwi6fixomfjl" path="res://Assets/MainCharacter/minerman-idle-front.png" id="2_7fso0"]
[ext_resource type="Texture2D" uid="uid://dcyy7lr4re8xe" path="res://Assets/MainCharacter/minerman-idle-Iateral.png" id="3_o1wih"]
[ext_resource type="Texture2D" uid="uid://dd7rcixcetjvw" path="res://Assets/MainCharacter/minerman-idle-Iateral2.png" id="4_ue0q5"]
[ext_resource type="Texture2D" uid="uid://cjsfwf3t06f0d" path="res://Assets/MainCharacter/minerman-idle-back.png" id="5_kbjm8"]
[ext_resource type="Texture2D" uid="uid://4mqnarj3y7sh" path="res://Assets/MainCharacter/take-off-front.png" id="6_g56eh"]
[ext_resource type="Texture2D" uid="uid://cgaaa7me021of" path="res://Assets/MainCharacter/minerman-walk-lateral.png" id="8_a54rp"]
[ext_resource type="Texture2D" uid="uid://b4leriwmnmf51" path="res://Assets/MainCharacter/minerman-walk-lateral2.png" id="9_gwclq"]
[ext_resource type="Texture2D" uid="uid://08pqojfd2jeo" path="res://Assets/MainCharacter/minerman-walk-back.png" id="10_qc0i4"]
[ext_resource type="Texture2D" uid="uid://bktccivb7o1g2" path="res://Assets/MainCharacter/win-front.png" id="11_a171k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3n6y"]
size = Vector2(19, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1bcs"]
atlas = ExtResource("1_6lv37")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8o15"]
atlas = ExtResource("1_6lv37")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h55yg"]
atlas = ExtResource("1_6lv37")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64mh3"]
atlas = ExtResource("1_6lv37")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnpkq"]
atlas = ExtResource("1_6lv37")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4dci"]
atlas = ExtResource("2_7fso0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg5k0"]
atlas = ExtResource("2_7fso0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hih46"]
atlas = ExtResource("2_7fso0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_roige"]
atlas = ExtResource("2_7fso0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmx2l"]
atlas = ExtResource("3_o1wih")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhls2"]
atlas = ExtResource("3_o1wih")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvnxw"]
atlas = ExtResource("3_o1wih")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgmbx"]
atlas = ExtResource("3_o1wih")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c32ax"]
atlas = ExtResource("4_ue0q5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_736nl"]
atlas = ExtResource("4_ue0q5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pcl4"]
atlas = ExtResource("4_ue0q5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ery2h"]
atlas = ExtResource("4_ue0q5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xryjj"]
atlas = ExtResource("5_kbjm8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbgln"]
atlas = ExtResource("5_kbjm8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5owsy"]
atlas = ExtResource("5_kbjm8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eakf1"]
atlas = ExtResource("5_kbjm8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x85yi"]
atlas = ExtResource("6_g56eh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42vy8"]
atlas = ExtResource("6_g56eh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlh4g"]
atlas = ExtResource("1_42fyu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f6uk"]
atlas = ExtResource("1_42fyu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjrah"]
atlas = ExtResource("1_42fyu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4ujd"]
atlas = ExtResource("1_42fyu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iil1c"]
atlas = ExtResource("8_a54rp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksv5f"]
atlas = ExtResource("8_a54rp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oifw"]
atlas = ExtResource("8_a54rp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fybd4"]
atlas = ExtResource("8_a54rp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u5xc"]
atlas = ExtResource("9_gwclq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x64yw"]
atlas = ExtResource("9_gwclq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hllqh"]
atlas = ExtResource("9_gwclq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lic1"]
atlas = ExtResource("9_gwclq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_orrog"]
atlas = ExtResource("10_qc0i4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrmmw"]
atlas = ExtResource("10_qc0i4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_teo5h"]
atlas = ExtResource("10_qc0i4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35fvd"]
atlas = ExtResource("10_qc0i4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68aew"]
atlas = ExtResource("11_a171k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_312p3"]
atlas = ExtResource("11_a171k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gwy44"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1bcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8o15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h55yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64mh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnpkq")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4dci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg5k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hih46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roige")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmx2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhls2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvnxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgmbx")
}],
"loop": true,
"name": &"idle_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c32ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_736nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pcl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ery2h")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xryjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbgln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5owsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eakf1")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x85yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42vy8")
}],
"loop": false,
"name": &"place_bomb",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlh4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f6uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjrah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ujd")
}],
"loop": true,
"name": &"walk_down",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iil1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksv5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oifw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fybd4")
}],
"loop": true,
"name": &"walk_left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u5xc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x64yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hllqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lic1")
}],
"loop": true,
"name": &"walk_right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_orrog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrmmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teo5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35fvd")
}],
"loop": true,
"name": &"walk_up",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68aew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_312p3")
}],
"loop": true,
"name": &"win",
"speed": 10.0
}]

[node name="MainCharacter" type="Area2D" groups=["player"]]
process_mode = 3
z_index = 3
script = ExtResource("1_tg18s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_i3n6y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gwy44")
animation = &"idle_down"

[node name="RayCasts" type="Node2D" parent="."]

[node name="up" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, -19)

[node name="down" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 20)

[node name="left" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(-17, 0)

[node name="right" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(16, 0)

[node name="ReadyTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_ready_timer_timeout"]
